[gd_scene load_steps=6 format=3 uid="uid://2qryjecms50t"]

[ext_resource type="Script" path="res://ui/components/specialized/health_meter.gd" id="1_ejub3"]
[ext_resource type="PackedScene" uid="uid://dj0e2jqxkppof" path="res://ui/components/meter.tscn" id="2_ih52u"]
[ext_resource type="PackedScene" uid="uid://djk15r2dcqo84" path="res://ui/components/seven_segment_display.tscn" id="3_nil7l"]
[ext_resource type="Theme" uid="uid://b1vn2j5dredkr" path="res://assets/themes/display_label.tres" id="4_7iolv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bm3n"]
bg_color = Color(0.380392, 0.380392, 0.380392, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.678431, 0.678431, 0.678431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HealthMeter" type="PanelContainer"]
custom_minimum_size = Vector2(255, 182)
anchors_preset = -1
anchor_right = 0.132813
anchor_bottom = 0.168519
theme_override_styles/panel = SubResource("StyleBoxFlat_4bm3n")
script = ExtResource("1_ejub3")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Meter" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_ih52u")]
custom_minimum_size = Vector2(225, 100)
layout_mode = 2

[node name="HealthDisplay" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CurrHpDisplay" parent="MarginContainer/VBoxContainer/HealthDisplay" instance=ExtResource("3_nil7l")]
layout_mode = 2
digits = 3
font_size = 24

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HealthDisplay"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 1.79
theme = ExtResource("4_7iolv")
theme_type_variation = &"LargeFont"
text = "CORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHpDisplay" parent="MarginContainer/VBoxContainer/HealthDisplay" instance=ExtResource("3_nil7l")]
layout_mode = 2
digits = 3
font_size = 24
